appId: io.github.zoskar.testlab
tags:
  - ios
---
- runFlow:
    commands:
      - launchApp:
          clearState: true
          permissions:
            all: unset #d: try deny on iOS 💀
- tapOn: "Notifications"
- tapOn: "Allow"
- tapOn: "Send Test Notification"
- tapOn:
    # tapping on notification text did not work on iOS
    # this works tho @mati
    point: "50%, 10%"
- assertVisible: "Notifications open success"
