appId: io.github.zoskar.testlab
# camera not available on iOS
---
- launchApp:
    clearState: true
    permissions:
      all: unset
- tapOn: "QR Code"
- tapOn: "Only this time"
- assertVisible: "Image loaded successfully"
