appId: io.github.zoskar.testlab
tags:
  - ios
---
- launchApp
- tapOn: "WebView"
- tapOn: "Add Element"
- assertVisible: "Delete"
